--- a/package.json
+++ b/package.json
@@ -9,13 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@rneui/base": "0.0.0-edge.2",
+    "@rneui/themed": "0.0.0-edge.2",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-web": "~0.18.11",
+    "react-redux": "^8.0.5",
+    "react-router-native": "^6.10.0",
+    "redux": "^4.2.1",
+    "s": "^1.0.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.21.4",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-react": "^7.32.2",
+    "redux-devtools": "^3.7.0"
   },
-  "private": true
+  "private": true,
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true
+  }
 }
