--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "react-native": "0.71.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
+    "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
     "react-router-native": "^6.10.0",
     "redux": "^4.2.1",
-    "s": "^1.0.0",
-    "react-native-svg": "13.4.0"
+    "s": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
