--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
     "@rneui/base": "0.0.0-edge.2",
     "@rneui/themed": "0.0.0-edge.2",
     "expo": "~48.0.9",
+    "expo-constants": "~14.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-picker": "^5.4.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
